force-app/main/default/objects/Resource_Assignment__c/fields/Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource__c</fullName>
    <type>Lookup</type>
    <referenceTo>Project_Resource__c</referenceTo>
    <relationshipName>Resource_Assignments</relationshipName>
    <label>Project Resource</label>
</CustomField>