force-app/main/default/objects/Resource_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Resource_Assignments</relationshipName>
    <label>User</label>
</CustomField>